# vllm-bench-standalone

./: pyproject.toml  requirements.txt  setup.py
vllm/: __init__.py  envs.py  logger.py
vllm/benchmarks/: datasets.py  placeholder.py  serve.py
vllm/benchmarks/lib/: ready_checker.py
vllm/entrypoints/cli/: __init__.py  main.py
vllm/entrypoints/cli/benchmark/: main.py
vllm/transformers_utils/: tokenizer.py  tokenizer_base.py
